Bug fix on admin dashboard (Error message not visible)

--- a/public/css/admindashboard.css
+++ b/public/css/admindashboard.css
@@ -57,6 +57,7 @@ body {
   background-color: #344966;
   border-radius: 10px;
   text-align: center;
+  height: fit-content;
 }
 
 #userForm .legends {
@@ -94,6 +95,8 @@ select {
   grid-column: 1 / 10;
   margin: 0;
   text-align: right;
+  color: #ff575a;
+  font-weight: bold;
 }
 
 #dashboard {
